[gd_scene load_steps=4 format=3 uid="uid://cllpcuaeq424j"]

[ext_resource type="Script" uid="uid://b7scfg1k3ox20" path="res://main_game.gd" id="1_1oj5k"]
[ext_resource type="Texture2D" uid="uid://dqxoljf06ads2" path="res://images/裏面.png" id="2_ykeeq"]
[ext_resource type="PackedScene" uid="uid://ogtf4xhup2vi" path="res://pause_menu.tscn" id="2_yx7mw"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 651.0
mouse_filter = 2
script = ExtResource("1_1oj5k")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = -13.0
offset_right = 1175.0
offset_bottom = 686.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="CharacterSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1171.0
offset_bottom = 669.0
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 458.0
offset_right = 1139.0
offset_bottom = 629.0
mouse_filter = 2

[node name="NameBox" type="NinePatchRect" parent="Panel"]
self_modulate = Color(1, 1, 1, 0.49803922)
show_behind_parent = true
layout_mode = 0
offset_top = -42.0
offset_right = 134.0
offset_bottom = 2.0
texture = ExtResource("2_ykeeq")

[node name="NameLabel" type="Label" parent="Panel/NameBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -17.0
offset_right = 0.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="Label" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 1112.0
offset_bottom = 184.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 34
bbcode_enabled = true

[node name="FadeOverLay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1168.0
offset_bottom = 669.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("2_yx7mw")]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]

[node name="SEPlayer" type="AudioStreamPlayer" parent="."]

[node name="SystemButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1008.0
offset_top = 2.0
offset_right = 1184.0
offset_bottom = 55.0

[node name="AutoButton" type="Button" parent="SystemButtons"]
layout_mode = 2
text = "Auto"

[node name="SkipButton" type="Button" parent="SystemButtons"]
layout_mode = 2
text = "Skip"

[node name="LogButton" type="Button" parent="SystemButtons"]
layout_mode = 2
text = "Log"

[node name="LogPanel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 655.0

[node name="ScrollContainer" type="ScrollContainer" parent="LogPanel"]
layout_mode = 0
offset_left = 43.0
offset_top = 65.0
offset_right = 1111.0
offset_bottom = 605.0
horizontal_scroll_mode = 0

[node name="LogContainer" type="VBoxContainer" parent="LogPanel/ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(1050, 550)
layout_mode = 2

[node name="LogCloseButton" type="Button" parent="LogPanel"]
layout_mode = 0
offset_left = 1007.0
offset_top = 23.0
offset_right = 1078.0
offset_bottom = 56.0
text = "閉じる"
icon_alignment = 1

[connection signal="pressed" from="SystemButtons/AutoButton" to="." method="_on_auto_button_pressed"]
[connection signal="pressed" from="SystemButtons/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="SystemButtons/LogButton" to="." method="_on_log_button_pressed"]
[connection signal="pressed" from="LogPanel/LogCloseButton" to="." method="_on_log_close_button_pressed"]
